syntax = "proto3";

package file_service;

option go_package = "./;pb";

service FileService {
  rpc Upload(stream UploadRequest) returns (UploadResponse);
  rpc Download(DownloadRequest) returns (stream DownloadResponse);
  rpc ListFiles(ListRequest) returns (ListResponse);
}

message UploadRequest {
  bytes chunk = 1;
  string filename = 2;
}

message UploadResponse {
  string id = 1;
  uint32 size = 2;
}

message DownloadRequest {
  string filename = 1;
}

message DownloadResponse {
  bytes chunk = 1;
}

message ListRequest {}

message FileInfo {
  string filename = 1;
  string created_at = 2;
  string updated_at = 3;
}

message ListResponse {
  repeated FileInfo files = 1;
}
